tests/ui/parser/misspelled-keywords/let.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `a`
  --> $DIR/let.rs:2:9
   |
LL |     Let a = 10;
   |         ^ expected one of 8 possible tokens

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `a`
  --> $DIR/let.rs:7:10
   |
LL |     lett a = 10;
   |          ^ expected one of 8 possible tokens

error: aborting due to 2 previous errors

